--- a/public/accordian.html
+++ b/public/accordian.html
@@ -2,9 +2,39 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>accordian project</title>
+    <link rel="stylesheet" href="/accordian.css">
+    <title>accordian.html</title>
   </head>
   <body>
+    <ul class="accordion">
+  <li class="accordion__drop-down">
+    <h2 class="accordion__bar"><i class="fa">I</i>My Files <span>435</span></h2>
+    <ul>
+     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+   </ul>
+  </li>
+  <li class="accordion__drop-down">
+    <h2 class="accordion__bar"><i class="fa">I</i>My Files <span>435</span></h2>
+    <ul>
+     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+   </ul>
+  </li>
+  <li class="accordion__drop-down">
+    <h2 class="accordion__bar"><i class="fa">I</i>My Files <span>435</span></h2>
+    <ul>
+     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+   </ul>
+  </li>
+</ul>
 
   </body>
 </html>
