--- a/public/accordian.html
+++ b/public/accordian.html
@@ -8,30 +8,39 @@
   <body>
     <ul class="accordion">
   <li class="accordion__drop-down">
-    <h2 class="accordion__bar"><i class="fa">I</i>My Files <span>435</span></h2>
+    <h4 class="accordion__bar"><i class="fa fa-file">I</i>My Files <span>495</span></h4>
     <ul>
-     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
-     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
-     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
-     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>01</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>02</p> <p>Skydrive</p> <p>23</p></li>
+     <li><p>03</p> <p>FTP Server</p> <p>23</p></li>
+     <li><p>04</p> <p>Dropbox</p> <p>23</p></li>
    </ul>
   </li>
   <li class="accordion__drop-down">
-    <h2 class="accordion__bar"><i class="fa">I</i>My Files <span>435</span></h2>
+    <h4 class="accordion__bar"><i class="fa fa-envelope">I</i>Cloud <span>26</span></h4>
     <ul>
-     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
-     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
-     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
-     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>01</p> <p>Connect</p> <p>23</p></li>
+     <li><p>02</p> <p>Profiles</p> <p>23</p></li>
+     <li><p>03</p> <p>Options</p> <p>23</p></li>
+     <li><p>04</p> <p>Connect</p> <p>23</p></li>
    </ul>
   </li>
   <li class="accordion__drop-down">
-    <h2 class="accordion__bar"><i class="fa">I</i>My Files <span>435</span></h2>
+    <h4 class="accordion__bar"><i class="fa fa-cloud">I</i>Mail <span>58</span></h4>
     <ul>
-     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
-     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
-     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
-     <li><p>I</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>01</p> <p>Inbox</p> <p>23</p></li>
+     <li><p>02</p> <p>Drafts</p> <p>23</p></li>
+     <li><p>03</p> <p>Sent</p> <p>23</p></li>
+     <li><p>04</p> <p>Trash</p> <p>23</p></li>
+   </ul>
+  </li>
+  <li class="accordion__drop-down">
+    <h4 class="accordion__bar"><i class="fa fa-plug">I</i>Sign Out <span>435</span></h4>
+    <ul>
+     <li><p>01</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>02</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>03</p> <p>Dropbox</p> <p>23</p></li>
+     <li><p>04</p> <p>I like Burgers</p> <p>23</p></li>
    </ul>
   </li>
 </ul>
