--- a/public/accordian.html
+++ b/public/accordian.html
@@ -8,39 +8,39 @@
   <body>
     <ul class="accordion">
   <li class="accordion__drop-down">
-    <h4 class="accordion__bar"><i class="fa fa-file">I</i>My Files <span>495</span></h4>
+    <h4 class="accordion__bar"><i class="fa fa-file"></i>My Files <span>495</span></h4>
     <ul class= "accordion__bar-list">
-     <li class="accordian__bar-list-a"><p class="number-left">01</p> <p>Dropbox</p> <span>23</span></li>
-     <li class="accordian__bar-list-a"><p class="number-left">02</p> <p>Skydrive</p> <span>23</span></li>
-     <li class="accordian__bar-list-a"><p class="number-left">03</p> <p>FTP Server</p> <span>23</span></li>
-     <li class="accordian__bar-list-a"><p class="number-left">04</p> <p>Dropbox</p> <span>23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">01</span>Dropbox<span class = "number-right">23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">02</span>Skydrive<span class = "number-right">23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">03</span>FTP Server<span class = "number-right">23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">04</span>Dropbox<span class = "number-right">23</span></li>
    </ul>
   </li>
   <li class="accordion__drop-down">
-    <h4 class="accordion__bar"><i class="fa fa-envelope">I</i>Cloud <span>26</span></h4>
+    <h4 class="accordion__bar"><i class="fa fa-envelope"></i>Cloud <span>26</span></h4>
     <ul class= "accordion__bar-list">
-     <li class="accordian__bar-list-a"><p class="number-left">01</p> <p>Connect</p> <span>23</span></li>
-     <li class="accordian__bar-list-a"><p class="number-left">02</p> <p>Profiles</p> <span>23</span></li>
-     <li class="accordian__bar-list-a"><p class="number-left">03</p> <p>Options</p> <span>23</span></li>
-     <li class="accordian__bar-list-a"><p class="number-left">04</p> <p>Connect</p> <span>23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">01</span>Connect<span class = "number-right">23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">02</span>Profiles<span class = "number-right">23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">03</span>Options<span class = "number-right">23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">04</span>Connect<span class = "number-right">23</span></li>
    </ul>
   </li>
   <li class="accordion__drop-down">
-    <h4 class="accordion__bar"><i class="fa fa-cloud">I</i>Mail <span>58</span></h4>
+    <h4 class="accordion__bar"><i class="fa fa-cloud"></i>Mail <span>58</span></h4>
       <ul class= "accordion__bar-list">
-     <li class="accordian__bar-list-a"><p class="number-left">01</p> <p>Inbox</p> <span>23</span></li>
-     <li class="accordian__bar-list-a"><p class="number-left">02</p> <p>Drafts</p> <span>23</span></li>
-     <li class="accordian__bar-list-a"><p class="number-left">03</p> <p>Sent</p> <span>23</span></li>
-     <li class="accordian__bar-list-a"><p class="number-left">04</p> <p>Trash</p> <span>23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">01</span>Inbox<span class = "number-right">23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">02</span>Drafts<span class = "number-right">23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">03</span>Sent<span class = "number-right">23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">04</span>Trash<span class = "number-right">23</span></li>
    </ul>
   </li>
   <li class="accordion__drop-down">
-    <h4 class="accordion__bar"><i class="fa fa-plug">I</i>Sign Out <span>435</span></h4>
+    <h4 class="accordion__bar"><i class="fa fa-plug"></i>Sign Out <span>435</span></h4>
       <ul class= "accordion__bar-list">
-     <li class="accordian__bar-list-a"><p class="number-left">01</p> <p>Dropbox</p> <span>23</span></li>
-     <li class="accordian__bar-list-a"><p class="number-left">02</p> <p>Dropbox</p> <span>23</span></li>
-     <li class="accordian__bar-list-a"><p class="number-left">03</p> <p>Dropbox</p> <span>23</span></li>
-     <li class="accordian__bar-list-a"><p class="number-left">04</p> <p>I like Burgers</p> <span>23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">01</span>Dropbox<span class = "number-right">23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">02</span>Dropbox<span class = "number-right">23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">03</span>Dropbox<span class = "number-right">23</span></li>
+     <li class="accordian__bar-list-a"><span class="number-left">04</span>I like Burgers<span class = "number-right">23</span></li>
    </ul>
   </li>
 </ul>
