finished mark up for html

--- a/public/keyboard.html
+++ b/public/keyboard.html
@@ -2,9 +2,78 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/normalize.css">
+    <link rel="stylesheet" href="app.css">
     <title>keyboard project</title>
   </head>
   <body>
-
+    <div class="input-text">
+  </div>
+<div class="keyboard">
+  <ul class="keyboard-row1">
+    <li class="keyboard-button">`</li>
+    <li class="keyboard-button">1</li>
+    <li class="keyboard-button">2</li>
+    <li class="keyboard-button">3</li>
+    <li class="keyboard-button">4</li>
+    <li class="keyboard-button">5</li>
+    <li class="keyboard-button">6</li>
+    <li class="keyboard-button">7</li>
+    <li class="keyboard-button">8</li>
+    <li class="keyboard-button">9</li>
+    <li class="keyboard-button">0</li>
+    <li class="keyboard-button">-</li>
+    <li class="keyboard-button">=</li>
+    <li class="keyboard-button_big">delete</li>
+  </ul>
+  <ul class="keyboard-row2">
+    <li class="keyboard-button_big">tab</li>
+    <li class="keyboard-button">q</li>
+    <li class="keyboard-button">w</li>
+    <li class="keyboard-button">e</li>
+    <li class="keyboard-button">r</li>
+    <li class="keyboard-button">t</li>
+    <li class="keyboard-button">y</li>
+    <li class="keyboard-button">u</li>
+    <li class="keyboard-button">i</li>
+    <li class="keyboard-button">o</li>
+    <li class="keyboard-button">p</li>
+    <li class="keyboard-button">[</li>
+    <li class="keyboard-button">]</li>
+    <li class="keyboard-button">\</li>
+    </ul>
+    <ul class="keyboard-row3">
+    <li class="keyboard-button_big">caps lock</li>
+    <li class="keyboard-button">a</li>
+    <li class="keyboard-button">s</li>
+    <li class="keyboard-button">d</li>
+    <li class="keyboard-button">f</li>
+    <li class="keyboard-button">g</li>
+    <li class="keyboard-button">h</li>
+    <li class="keyboard-button">j</li>
+    <li class="keyboard-button">k</li>
+    <li class="keyboard-button">l</li>
+    <li class="keyboard-button">;</li>
+    <li class="keyboard-button">'</li>
+    <li class="keyboard-button_big">return</li>
+    </ul>
+    <ul class="keyboard-row4">
+    <li class="keyboard-button_big">shift</li>
+    <li class="keyboard-button">z</li>
+    <li class="keyboard-button">x</li>
+    <li class="keyboard-button">c</li>
+    <li class="keyboard-button">v</li>
+    <li class="keyboard-button">b</li>
+    <li class="keyboard-button">n</li>
+    <li class="keyboard-button">m</li>
+    <li class="keyboard-button">,</li>
+    <li class="keyboard-button">.</li>
+    <li class="keyboard-button">/</li>
+    <li class="keyboard-button_big">shift</li>
+    </ul>
+    <ul class="keyboard-row5">
+    <li class="keyboard-button_space">space</li>
+    </ul>
+</div>
   </body>
 </html>
