--- a/public/keyboard.html
+++ b/public/keyboard.html
@@ -10,7 +10,7 @@
     <div class="input-text">
   </div>
 <div class="keyboard">
-  <ul class="keyboard-row1">
+  <ul class="keyboard-row">
     <li class="keyboard-button">`</li>
     <li class="keyboard-button">1</li>
     <li class="keyboard-button">2</li>
@@ -26,7 +26,7 @@
     <li class="keyboard-button">=</li>
     <li class="keyboard-button_big">delete</li>
   </ul>
-  <ul class="keyboard-row2">
+  <ul class="keyboard-row">
     <li class="keyboard-button_big">tab</li>
     <li class="keyboard-button">q</li>
     <li class="keyboard-button">w</li>
@@ -42,7 +42,7 @@
     <li class="keyboard-button">]</li>
     <li class="keyboard-button">\</li>
     </ul>
-    <ul class="keyboard-row3">
+    <ul class="keyboard-row">
     <li class="keyboard-button_big">caps lock</li>
     <li class="keyboard-button">a</li>
     <li class="keyboard-button">s</li>
@@ -57,7 +57,7 @@
     <li class="keyboard-button">'</li>
     <li class="keyboard-button_big">return</li>
     </ul>
-    <ul class="keyboard-row4">
+    <ul class="keyboard-row">
     <li class="keyboard-button_big">shift</li>
     <li class="keyboard-button">z</li>
     <li class="keyboard-button">x</li>
@@ -71,7 +71,7 @@
     <li class="keyboard-button">/</li>
     <li class="keyboard-button_big">shift</li>
     </ul>
-    <ul class="keyboard-row5">
+    <ul class="keyboard-row">
     <li class="keyboard-button_space">space</li>
     </ul>
 </div>
