--- a/public/accordian.html
+++ b/public/accordian.html
@@ -1,50 +1,116 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="/normalize.css">
-    <link rel="stylesheet" href="app.css">
-    <title>accordian.html</title>
-  </head>
-  <body>
-    <ul class="accordion">
-  <li class="accordion__drop-down">
-    <h4 class="accordion__bar"><i class="fa fa-file"></i>My Files <span>495</span></h4>
-    <ul class= "accordion__bar-list">
-     <li class="accordian__bar-list-a"><span class="number-left">01</span>Dropbox<span class = "number-right">23</span></li>
-     <li class="accordian__bar-list-a"><span class="number-left">02</span>Skydrive<span class = "number-right">23</span></li>
-     <li class="accordian__bar-list-a"><span class="number-left">03</span>FTP Server<span class = "number-right">23</span></li>
-     <li class="accordian__bar-list-a"><span class="number-left">04</span>Dropbox<span class = "number-right">23</span></li>
-   </ul>
-  </li>
-  <li class="accordion__drop-down">
-    <h4 class="accordion__bar"><i class="fa fa-envelope"></i>Cloud <span>26</span></h4>
-    <ul class= "accordion__bar-list">
-     <li class="accordian__bar-list-a"><span class="number-left">01</span>Connect<span class = "number-right">23</span></li>
-     <li class="accordian__bar-list-a"><span class="number-left">02</span>Profiles<span class = "number-right">23</span></li>
-     <li class="accordian__bar-list-a"><span class="number-left">03</span>Options<span class = "number-right">23</span></li>
-     <li class="accordian__bar-list-a"><span class="number-left">04</span>Connect<span class = "number-right">23</span></li>
-   </ul>
-  </li>
-  <li class="accordion__drop-down">
-    <h4 class="accordion__bar"><i class="fa fa-cloud"></i>Mail <span>58</span></h4>
-      <ul class= "accordion__bar-list">
-     <li class="accordian__bar-list-a"><span class="number-left">01</span>Inbox<span class = "number-right">23</span></li>
-     <li class="accordian__bar-list-a"><span class="number-left">02</span>Drafts<span class = "number-right">23</span></li>
-     <li class="accordian__bar-list-a"><span class="number-left">03</span>Sent<span class = "number-right">23</span></li>
-     <li class="accordian__bar-list-a"><span class="number-left">04</span>Trash<span class = "number-right">23</span></li>
-   </ul>
-  </li>
-  <li class="accordion__drop-down">
-    <h4 class="accordion__bar"><i class="fa fa-plug"></i>Sign Out <span>435</span></h4>
-      <ul class= "accordion__bar-list">
-     <li class="accordian__bar-list-a"><span class="number-left">01</span>Dropbox<span class = "number-right">23</span></li>
-     <li class="accordian__bar-list-a"><span class="number-left">02</span>Dropbox<span class = "number-right">23</span></li>
-     <li class="accordian__bar-list-a"><span class="number-left">03</span>Dropbox<span class = "number-right">23</span></li>
-     <li class="accordian__bar-list-a"><span class="number-left">04</span>I like Burgers<span class = "number-right">23</span></li>
-   </ul>
-  </li>
-</ul>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="/normalize.css">
+  <link rel="stylesheet" href="app.css">
+  <title>accordian.html</title>
+</head>
+
+<body>
+  <ul class="accordion">
+    <li class="accordion__drop-down">
+      <h4 class="accordion__bar"><i class="fa fa-file"></i>My Files
+        <span>495</span>
+      </h4>
+      <ul class="accordion__bar-list">
+        <li class="accordian__bar-list-a">
+          <span class="number-left">01</span>Dropbox
+          <span class="number-right">23</span>
+        </li>
+        <li class="accordian__bar-list-a">
+          <span class="number-left">02</span>Skydrive
+          <span class="number-right">23</span>
+        </li>
+        <li class="accordian__bar-list-a">
+          <span class="number-left">03</span>FTP Server
+          <span class="number-right">23</span>
+        </li>
+        <li class="accordian__bar-list-a">
+          <span class="number-left">04</span>Dropbox
+          <span class="number-right">23</span>
+        </li>
+      </ul>
+    </li>
+    <li class="accordion__drop-down">
+      <h4 class="accordion__bar"><i class="fa fa-envelope"></i>Cloud
+        <span>26</span>
+      </h4>
+      <ul class="accordion__bar-list">
+        <li class="accordian__bar-list-a">
+          <span class="number-left">01</span>Connect
+          <span class="number-right">23</span>
+        </li>
+        <li class="accordian__bar-list-a">
+          <span class="number-left">02</span>Profiles
+          <span class="number-right">23</span>
+        </li>
+        <li class="accordian__bar-list-a">
+          <span class="number-left">03</span>Options
+          <span class="number-right">23</span>
+        </li>
+        <li class="accordian__bar-list-a">
+          <span class="number-left">04</span>Connect
+          <span class="number-right">23</span>
+        </li>
+      </ul>
+    </li>
+    <li class="accordion__drop-down">
+      <h4 class="accordion__bar"><i class="fa fa-cloud"></i>Mail
+        <span>58</span>
+      </h4>
+      <ul class="accordion__bar-list">
+        <li class="accordian__bar-list-a">
+          <span class="number-left">01</span>Inbox
+          <span class="number-right">23</span>
+        </li>
+        <li class="accordian__bar-list-a">
+          <span class="number-left">02</span>Drafts
+          <span class="number-right">23</span>
+        </li>
+        <li class="accordian__bar-list-a">
+          <span class="number-left">03</span>Sent
+          <span class="number-right">23</span>
+        </li>
+        <li class="accordian__bar-list-a">
+          <span class="number-left">04</span>Trash
+          <span class="number-right">23</span>
+        </li>
+      </ul>
+    </li>
+    <li class="accordion__drop-down">
+      <h4 class="accordion__bar"><i class="fa fa-plug"></i>Sign Out
+        <span>435</span>
+      </h4>
+      <ul class="accordion__bar-list">
+        <li class="accordian__bar-list-a">
+          <span class="number-left">01</span>Dropbox
+          <span class="number-right">23</span>
+        </li>
+        <li class="accordian__bar-list-a">
+          <span class="number-left">02</span>Dropbox
+          <span class="number-right">23</span>
+        </li>
+        <li class="accordian__bar-list-a">
+          <span class="number-left">03</span>Dropbox
+          <span class="number-right">23</span>
+        </li>
+        <li class="accordian__bar-list-a">
+          <span class="number-left">04</span>I like Burgers
+          <span class="number-right">23</span>
+        </li>
+      </ul>
+    </li>
+  </ul>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.20/require.js"></script>
+  <script src="/jquery.js"></script>
+  <script src="app.js"></script>
+  <script>
+    require(['accordian'], function(accordian) {
+      accordian();
+    });
+  </script>
+</body>
+
 </html>
