fixed keyboard html and css for js

--- a/public/keyboard.html
+++ b/public/keyboard.html
@@ -7,8 +7,7 @@
     <title>keyboard project</title>
   </head>
   <body>
-    <div class="input-text">
-  </div>
+    <textarea id="inputtext" rows="15" cols="90"></textarea>
 <div class="keyboard">
   <ul class="keyboard-row">
     <li class="keyboard-button">`</li>
@@ -24,10 +23,10 @@
     <li class="keyboard-button">0</li>
     <li class="keyboard-button">-</li>
     <li class="keyboard-button">=</li>
-    <li class="keyboard-button_big">delete</li>
+    <li class="keyboard-button_delete">delete</li>
   </ul>
   <ul class="keyboard-row">
-    <li class="keyboard-button_big">tab</li>
+    <li class="keyboard-button_tab">tab</li>
     <li class="keyboard-button">q</li>
     <li class="keyboard-button">w</li>
     <li class="keyboard-button">e</li>
@@ -55,7 +54,7 @@
     <li class="keyboard-button">l</li>
     <li class="keyboard-button">;</li>
     <li class="keyboard-button">'</li>
-    <li class="keyboard-button_big">return</li>
+    <li class="keyboard-button_return">return</li>
     </ul>
     <ul class="keyboard-row">
     <li class="keyboard-button_big">shift</li>
