--- a/public/accordian.html
+++ b/public/accordian.html
@@ -80,26 +80,8 @@
       </ul>
     </li>
     <li class="accordion__drop-down">
-      <h4 class="accordion__bar"><i class="fa fa-plug"></i>Sign Out
-        <span>435</span>
-      </h4>
-      <ul class="accordion__bar-list">
-        <li class="accordian__bar-list-a">
-          <span class="number-left">01</span>Dropbox
-          <span class="number-right">23</span>
-        </li>
-        <li class="accordian__bar-list-a">
-          <span class="number-left">02</span>Dropbox
-          <span class="number-right">23</span>
-        </li>
-        <li class="accordian__bar-list-a">
-          <span class="number-left">03</span>Dropbox
-          <span class="number-right">23</span>
-        </li>
-        <li class="accordian__bar-list-a">
-          <span class="number-left">04</span>I like Burgers
-          <span class="number-right">23</span>
-        </li>
+      <h4 class="accordion__bar"><i class="fa fa-plug"></i>Sign Out</h4>
+      </li>
       </ul>
     </li>
   </ul>
