set up return tab space and (work in progress) delete keys

--- a/public/accordian.html
+++ b/public/accordian.html
@@ -89,8 +89,8 @@
   <script src="/jquery.js"></script>
   <script src="app.js"></script>
   <script>
-    require(['accordian'], function(accordian) {
-      accordian();
+    require(['app'], function(app) {
+      app();
     });
   </script>
 </body>
