finished for real :-)

--- a/public/accordian.html
+++ b/public/accordian.html
@@ -89,8 +89,8 @@
   <script src="/jquery.js"></script>
   <script src="app.js"></script>
   <script>
-    require(['app'], function(app) {
-      app();
+    require(['accordian'], function(accordian) {
+      accordian();
     });
   </script>
 </body>
